idldir = $(datadir)/idl

idl_DATA = Accessibility.idl\
	   Accessible.idl   \
	   Action.idl	    \
	   Application.idl  \
	   Component.idl    \
           Desktop.idl      \
	   EditableText.idl \
           Event.idl        \
	   Hyperlink.idl    \
	   Image.idl        \
	   Registry.idl	    \
	   Relation.idl	    \
	   Role.idl	    \
           State.idl        \
	   StreamableContent.idl \
	   Table.idl	\
	   Text.idl 	\
	   Value.idl

EXTRA_DIST=$(idl_DATA)
