idldir = $(datadir)/idl/at-spi-1.0

idl_DATA = Accessibility.idl	\
	   Accessible.idl	\
	   Action.idl		\
	   Application.idl	\
	   Component.idl	\
           Desktop.idl		\
	   EditableText.idl	\
           Event.idl		\
	   Hyperlink.idl	\
	   Hypertext.idl	\
	   Image.idl		\
	   Registry.idl		\
	   Relation.idl		\
	   Role.idl		\
           Selection.idl	\
           State.idl		\
	   StreamableContent.idl	\
	   Table.idl		\
	   Text.idl		\
	   Value.idl

EXTRA_DIST=$(idl_DATA)
