idldir = $(datadir)/idl/at-spi-1.0

idl_DATA =					\
	Accessibility.idl			\
	Accessibility_Accessible.idl		\
	Accessibility_Action.idl		\
	Accessibility_Application.idl		\
	Accessibility_Collection.idl		\
	Accessibility_Component.idl		\
	Accessibility_Desktop.idl		\
	Accessibility_Document.idl		\
	Accessibility_EditableText.idl		\
	Accessibility_Event.idl			\
	Accessibility_Hyperlink.idl		\
	Accessibility_Hypertext.idl		\
	Accessibility_Image.idl			\
	Accessibility_Registry.idl		\
	Accessibility_Relation.idl		\
	Accessibility_Role.idl			\
	Accessibility_Selection.idl		\
	Accessibility_Selector.idl		\
	Accessibility_State.idl			\
	Accessibility_StreamableContent.idl	\
	Accessibility_Table.idl			\
	Accessibility_Text.idl			\
	Accessibility_Value.idl			\
	Accessibility_LoginHelper.idl

EXTRA_DIST=$(idl_DATA)
