pyatspi_PYTHON = \
	accessible.py	\
	action.py	\
	base.py		\
	cache.py	\
	constants.py	\
	desktop.py	\
	event.py	\
	factory.py	\
	interfaces.py	\
	__init__.py	\
	Makefile.am	\
	other.py	\
	state.py	\
	registry.py	\
	relation.py	\
	role.py		\
	test.py		\
	utils.py

pyatspidir=$(pyexecdir)/pyatspi

CLEANFILES = *.pyc
