pyatspi_PYTHON = \
		accessible.py		\
		action.py		\
		application.py		\
		base.py			\
		cache.py		\
		collection.py		\
		component.py		\
		constants.py		\
		desktop.py		\
		document.py		\
		editabletext.py		\
		event.py		\
		factory.py		\
		hyperlink.py		\
		hypertext.py		\
		image.py		\
		__init__.py		\
		interfaces.py		\
		loginhelper.py		\
		registry.py		\
		relation.py		\
		role.py			\
		selection.py		\
		selector.py		\
		state.py		\
		streamablecontent.py	\
		table.py		\
		test.py			\
		text.py			\
		utils.py		\
		value.py

pyatspidir=$(pyexecdir)/pyatspi

CLEANFILES = *.pyc
