pyatspidir = $(pythondir)/pyatspi
pyatspi_PYTHON = \
		Accessibility.py	\
		accessible.py		\
		accessiblecache.py	\
		action.py		\
		application.py		\
		applicationcache.py	\
		base.py			\
		collection.py		\
		component.py		\
		constants.py		\
		desktop.py		\
		document.py		\
		editabletext.py		\
		event.py		\
		factory.py		\
		hyperlink.py		\
		hypertext.py		\
		image.py		\
		__init__.py		\
		interfaces.py		\
		loginhelper.py		\
		registry.py		\
		relation.py		\
		role.py			\
		selection.py		\
		selector.py		\
		state.py		\
		streamablecontent.py	\
		table.py		\
		text.py			\
		utils.py		\
		value.py

CLEANFILES = *.pyc
